# notenverwaltung

./: .env  .gitignore  README.md  main.py  pyproject.toml  run.py
notenverwaltung/: __init__.py  __main__.py  app.py  bootstrap.py  csv_io.py  exceptions.py  grade.py  gradebook.py  json_io.py  student.py
notenverwaltung/models/: __init__.py  course.py  grade.py
notenverwaltung/reports/: __init__.py  base.py  csv_report.py  text_report.py
notenverwaltung/storage/: __init__.py  base.py  database.py  memory_store.py  sqlite_store.py
tests/: test_course.py  test_exceptions.py  test_grade.py  test_gradebook.py  test_persistence.py  test_reports.py  test_storage.py  test_student.py
