[project]
name = "notenverwaltung"
version = "0.1.0"
description = "Student grade management system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["notenverwaltung"]

[tool.pytest.ini_options]
testpaths = ["tests"]
