[project]
name = "notenverwaltung"
version = "0.1.0"
description = "Student grade management system"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gradio>=5.0.0",
]

[project.scripts]
notenverwaltung = "notenverwaltung.app:main"

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["notenverwaltung*"]

[tool.uv]
config-settings = { editable_mode = "compat" }

[tool.pytest.ini_options]
testpaths = ["tests"]
